--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/endreymarcell/logical.ts/issues"
   },
-  "homepage": "https://github.com/endreymarcell/logical.ts#readme"
+  "homepage": "https://github.com/endreymarcell/logical.ts#readme",
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "jest": "^27.4.7",
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5"
+  }
 }
