--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Logical state management for TypeScript applications",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "format": "prettier -w src/**/*",
     "test": "jest"
   },
   "repository": {
@@ -12,10 +14,6 @@
   },
   "author": "Marcell Endrey <endrey.marcell@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/endreymarcell/logical.ts/issues"
-  },
-  "homepage": "https://github.com/endreymarcell/logical.ts#readme",
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "jest": "^27.4.7",
