--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "tabWidth": 4,
     "singleQuote": true,
     "trailingComma": "all",
-    "printWidth": 120
+    "arrowParens": "avoid",
+    "printWidth": 110
 }
