--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   "author": "Marcell Endrey <endrey.marcell@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.4.0",
+    "babel-jest": "^27.4.6",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "immer": "^9.0.12"
   }
 }
