--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "logical.ts",
   "version": "0.1.0",
   "description": "Logical state management for TypeScript applications",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "tsc",
     "format": "prettier -w src/**/*",
