add GNU GPLv3 license

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/endreymarcell/logical.ts.git"
   },
   "author": "Marcell Endrey <endrey.marcell@gmail.com>",
-  "license": "MIT",
+  "license": "GNU GPLv3",
   "devDependencies": {
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
