--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -2,6 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
+    "declaration": true,
+    "esModuleInterop": true
   },
   "include": ["src/*.ts"],
   "exclude": ["src/*.test.ts"],
