--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@endreymarcell/logical.ts",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Logical state management for TypeScript applications",
   "type": "module",
   "main": "dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "exports": "./dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
