--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-jest": "^27.4.6",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
+    "tsup": "^5.11.13",
     "typescript": "^4.5.5"
   },
   "dependencies": {
