--- a/config/tsconfig-build-common.json
+++ b/config/tsconfig-build-common.json
@@ -1,9 +1,8 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
     "declaration": true,
     "esModuleInterop": true
   },
-  "include": ["src/*.ts"],
+  "include": ["../src/*.ts"]
 }
