--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   ],
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.js",
+      "types": "./dist/esm/index.d.ts"
     }
   },
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --dts --format esm,cjs",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc -p config/tsconfig-build-cjs.json",
+    "build:esm": "tsc -p config/tsconfig-build-esm.json",
     "format": "prettier -w src/**/*",
     "test": "npm run test:types && npm run test:functions",
     "test:types": "tsc --noEmit",
@@ -37,7 +39,6 @@
     "babel-jest": "^27.4.6",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
-    "tsup": "^5.11.13",
     "typescript": "^4.5.5"
   },
   "dependencies": {
