--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@endreymarcell/logical.ts",
+  "name": "@endreymarcell/logical",
   "version": "0.1.3",
   "description": "Logical state management for TypeScript applications",
   "type": "module",
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/endreymarcell/logical.ts.git"
+    "url": "git+https://github.com/endreymarcell/logical.git"
   },
   "author": "Marcell Endrey <endrey.marcell@gmail.com>",
   "license": "GNU GPLv3",
