--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
 {
-  "compilerOptions": {
-    "target": "es2016",
-    "module": "es6",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
-  },
-  "include": ["src/*.ts",
-    "tests/**/*.ts"
-  ],
+    "compilerOptions": {
+        "target": "es2016",
+        "module": "es6",
+        "moduleResolution": "Node",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true
+    },
+    "include": ["src/*.ts", "tests/**/*.ts"]
 }
