one can only hope

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "types": "./dist/types/index.d.ts",
     "scripts": {
         "build": "npm run build:types && npm run build:cjs && npm run build:esm",
-        "build:cjs": "tsc -p config/tsconfig-build-cjs.json",
+        "build:cjs": "tsc -p config/tsconfig-build-cjs.json && npm run cjs-compat-hack",
+        "cjs-compat-hack": "echo '{\"type\": \"commonjs\"}' >dist/cjs/package.json",
         "build:esm": "tsc -p config/tsconfig-build-esm.json",
         "build:types": "tsc -p config/tsconfig-build-types.json",
         "format": "prettier -w src/**/*",
