--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "test": "npm run test:types && npm run test:functions",
         "test:types": "tsc --noEmit",
         "test:functions": "jest tests/functions",
-        "publish": "npm publish --access public"
+        "publish": "npm run build && npm publish --access public"
     },
     "repository": {
         "type": "git",
