--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@endreymarcell/logical",
-    "version": "0.1.9",
+    "version": "0.1.10",
     "description": "Logical state management for TypeScript applications",
     "type": "module",
     "files": [
@@ -15,6 +15,7 @@
     },
     "types": "./dist/types/index.d.ts",
     "scripts": {
+        "clean": "rm -rf dist",
         "build": "npm run build:types && npm run build:cjs && npm run build:esm",
         "build:cjs": "tsc -p config/tsconfig-build-cjs.json && npm run cjs-compat-hack",
         "cjs-compat-hack": "echo '{\"type\": \"commonjs\"}' >dist/cjs/package.json",
@@ -24,7 +25,7 @@
         "test": "npm run test:types && npm run test:functions",
         "test:types": "tsc --noEmit",
         "test:functions": "jest tests/functions",
-        "publish": "npm run build && npm publish --access public"
+        "publish": "npm run clean && npm run build && npm publish --access public"
     },
     "repository": {
         "type": "git",
