--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "test": "npm run test:types && npm run test:functions",
         "test:types": "tsc --noEmit",
         "test:functions": "jest tests/functions",
-        "publish": "npm run clean && npm run build && npm publish --access public"
+        "release": "npm run clean && npm run build && npm publish --access public"
     },
     "repository": {
         "type": "git",
