--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "build": "npm run build:types && npm run build:cjs && npm run build:esm",
         "build:cjs": "tsc -p config/tsconfig-build-cjs.json && npm run cjs-compat-hack",
         "cjs-compat-hack": "echo '{\"type\": \"commonjs\"}' >dist/cjs/package.json",
-        "build:esm": "tsc -p config/tsconfig-build-esm.json",
+        "esm-compat-hack": "scripts/esm-compat-hack.sh",
+        "build:esm": "tsc -p config/tsconfig-build-esm.json && npm run esm-compat-hack",
         "build:types": "tsc -p config/tsconfig-build-types.json",
         "format": "prettier -w src/**/*",
         "test": "npm run test:types && npm run test:functions",
