--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "clean": "rm -rf dist",
         "build": "npm run build:types && npm run build:cjs && npm run build:esm",
         "build:cjs": "tsc -p config/tsconfig-build-cjs.json && npm run cjs-compat-hack",
-        "cjs-compat-hack": "echo '{\"type\": \"commonjs\"}' >dist/cjs/package.json",
+        "cjs-compat-hack": "scripts/cjs-compat-hack.sh",
         "esm-compat-hack": "scripts/esm-compat-hack.sh",
         "build:esm": "tsc -p config/tsconfig-build-esm.json && npm run esm-compat-hack",
         "build:types": "tsc -p config/tsconfig-build-types.json",
